mongodb-express/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
  - host: mongo-express.lab.par-tec.it
    http:
      paths:
      - backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
